--- a/production/MCsamples_2022.yml
+++ b/production/MCsamples_2022.yml
@@ -7,9 +7,9 @@ samples:
   #
   #  MC
   #  
-  #WnuTau3Mu_2022:
-  #  dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv3-124X_mcRun3_2022_realistic_v12-v2/MINIAODSIM
-  #  isMC: True  
+  WnuTau3Mu_2022:
+    dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv3-124X_mcRun3_2022_realistic_v12-v2/MINIAODSIM
+    isMC: True  
   WnuTau3Mu_2022EE:
     dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer22EEMiniAODv3-124X_mcRun3_2022_realistic_postEE_v1-v2/MINIAODSIM 
     isMC: True  
