--- a/production/MCsamples_2022.yml
+++ b/production/MCsamples_2022.yml
@@ -10,6 +10,6 @@ samples:
   WnuTau3Mu_2022:
     dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
     isMC: True  
-  #DstoPhiPi_2022:
-  #  dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
-  #  isMC: True  
+  DstoPhiPi_2022:
+    dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
+    isMC: True  
