--- a/production/data_samples_2023BC.yml
+++ b/production/data_samples_2023BC.yml
@@ -12,67 +12,137 @@ samples:
   #  DATA
   #  
   #
-  data_Run2023B_0:    
-    dataset: /ParkingDoubleMuonLowMass0/Run2023B-22Sep2023-v1/MINIAOD
+  # --- 2023 B
+  #data_Run2023B_0:    
+  #  dataset: /ParkingDoubleMuonLowMass0/Run2023B-22Sep2023-v1/MINIAOD
+  #  isMC: False
+  ##
+  #data_Run2023B_1:    
+  #  dataset: /ParkingDoubleMuonLowMass1/Run2023B-22Sep2023-v1/MINIAOD
+  #  isMC: False
+  ##
+  #data_Run2023B_2:    
+  #  dataset: /ParkingDoubleMuonLowMass2/Run2023B-22Sep2023-v1/MINIAOD
+  #  isMC: False
+  ##
+  #data_Run2023B_3:    
+  #  dataset: /ParkingDoubleMuonLowMass3/Run2023B-22Sep2023-v1/MINIAOD
+  #  isMC: False
+  ##
+  #data_Run2023B_4:    
+  #  dataset: /ParkingDoubleMuonLowMass4/Run2023B-22Sep2023-v2/MINIAOD
+  #  isMC: False
+  ##
+  #data_Run2023B_5:    
+  #  dataset: /ParkingDoubleMuonLowMass5/Run2023B-22Sep2023-v1/MINIAOD
+  #  isMC: False
+  ##
+  #data_Run2023B_6:    
+  #  dataset: /ParkingDoubleMuonLowMass6/Run2023B-22Sep2023-v1/MINIAOD
+  #  isMC: False
+  ##
+  #data_Run2023B_7:    
+  #  dataset: /ParkingDoubleMuonLowMass7/Run2023B-22Sep2023-v1/MINIAOD
+  #  isMC: False
+  #
+  # --- 2023 C
+  # (v1)
+  data_Run2023Cv1_0:    
+    dataset: /ParkingDoubleMuonLowMass0/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False
-  #
-  data_Run2023B_1:    
-    dataset: /ParkingDoubleMuonLowMass1/Run2023B-22Sep2023-v1/MINIAOD
+  data_Run2023Cv1_1:    
+    dataset: /ParkingDoubleMuonLowMass1/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False
-  #
-  data_Run2023B_2:    
-    dataset: /ParkingDoubleMuonLowMass2/Run2023B-22Sep2023-v1/MINIAOD
+  data_Run2023Cv1_2:    
+    dataset: /ParkingDoubleMuonLowMass2/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False
-  #
-  data_Run2023B_3:    
-    dataset: /ParkingDoubleMuonLowMass3/Run2023B-22Sep2023-v1/MINIAOD
+  data_Run2023Cv1_3:    
+    dataset: /ParkingDoubleMuonLowMass3/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False
-  #
-  data_Run2023B_4:    
-    dataset: /ParkingDoubleMuonLowMass4/Run2023B-22Sep2023-v2/MINIAOD
+  data_Run2023Cv1_4:    
+    dataset: /ParkingDoubleMuonLowMass4/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False
-  #
-  data_Run2023B_5:    
-    dataset: /ParkingDoubleMuonLowMass5/Run2023B-22Sep2023-v1/MINIAOD
+  data_Run2023Cv1_5:    
+    dataset: /ParkingDoubleMuonLowMass5/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False
-  #
-  data_Run2023B_6:    
-    dataset: /ParkingDoubleMuonLowMass6/Run2023B-22Sep2023-v1/MINIAOD
+  data_Run2023Cv1_6:    
+    dataset: /ParkingDoubleMuonLowMass6/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False
-  #
-  data_Run2023B_7:    
-    dataset: /ParkingDoubleMuonLowMass7/Run2023B-22Sep2023-v1/MINIAOD
-    isMC: False
-  #
-  #
-  data_Run2023C_0:    
-    dataset: /ParkingDoubleMuonLowMass0/Run2023C-22Sep2023_v4-v1/MINIAOD
-    isMC: False
-  #
-  data_Run2023C_1:    
-    dataset: /ParkingDoubleMuonLowMass1/Run2023C-22Sep2023_v4-v1/MINIAOD
-    isMC: False
-  #
-  data_Run2023C_2:    
-    dataset: /ParkingDoubleMuonLowMass2/Run2023C-22Sep2023_v4-v1/MINIAOD
-    isMC: False
-  #
-  data_Run2023C_3:    
-    dataset: /ParkingDoubleMuonLowMass3/Run2023C-22Sep2023_v4-v2/MINIAOD
-    isMC: False
-  #
-  data_Run2023C_4:    
-    dataset: /ParkingDoubleMuonLowMass4/Run2023C-22Sep2023_v4-v1/MINIAOD
-    isMC: False
-  #
-  data_Run2023C_5:    
-    dataset: /ParkingDoubleMuonLowMass5/Run2023C-22Sep2023_v4-v1/MINIAOD
-    isMC: False
-  #
-  data_Run2023C_6:    
-    dataset: /ParkingDoubleMuonLowMass6/Run2023C-22Sep2023_v4-v1/MINIAOD
-    isMC: False
-  #
-  data_Run2023C_7:    
-    dataset: /ParkingDoubleMuonLowMass7/Run2023C-22Sep2023_v4-v1/MINIAOD
+  data_Run2023Cv1_7:    
+    dataset: /ParkingDoubleMuonLowMass7/Run2023C-22Sep2023_v1-v1/MINIAOD
     isMC: False  
+  # (v2)
+  data_Run2023Cv2_0:    
+    dataset: /ParkingDoubleMuonLowMass0/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv2_1:    
+    dataset: /ParkingDoubleMuonLowMass1/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv2_2:    
+    dataset: /ParkingDoubleMuonLowMass2/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv2_3:    
+    dataset: /ParkingDoubleMuonLowMass3/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv2_4:    
+    dataset: /ParkingDoubleMuonLowMass4/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv2_5:    
+    dataset: /ParkingDoubleMuonLowMass5/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv2_6:    
+    dataset: /ParkingDoubleMuonLowMass6/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv2_7:    
+    dataset: /ParkingDoubleMuonLowMass7/Run2023C-22Sep2023_v2-v1/MINIAOD
+    isMC: False  
+  # (v3)
+  data_Run2023Cv3_0:    
+    dataset: /ParkingDoubleMuonLowMass0/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv3_1:    
+    dataset: /ParkingDoubleMuonLowMass1/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv3_2:    
+    dataset: /ParkingDoubleMuonLowMass2/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv3_3:    
+    dataset: /ParkingDoubleMuonLowMass3/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv3_4:    
+    dataset: /ParkingDoubleMuonLowMass4/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv3_5:    
+    dataset: /ParkingDoubleMuonLowMass5/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv3_6:    
+    dataset: /ParkingDoubleMuonLowMass6/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False
+  data_Run2023Cv3_7:    
+    dataset: /ParkingDoubleMuonLowMass7/Run2023C-22Sep2023_v3-v1/MINIAOD
+    isMC: False  
+  # (v4)
+  #data_Run2023Cv4_0:    
+  #  dataset: /ParkingDoubleMuonLowMass0/Run2023C-22Sep2023_v4-v1/MINIAOD
+  #  isMC: False
+  #data_Run2023Cv4_1:    
+  #  dataset: /ParkingDoubleMuonLowMass1/Run2023C-22Sep2023_v4-v1/MINIAOD
+  #  isMC: False
+  #data_Run2023Cv4_2:    
+  #  dataset: /ParkingDoubleMuonLowMass2/Run2023C-22Sep2023_v4-v1/MINIAOD
+  #  isMC: False
+  #data_Run2023Cv4_3:    
+  #  dataset: /ParkingDoubleMuonLowMass3/Run2023C-22Sep2023_v4-v2/MINIAOD
+  #  isMC: False
+  #data_Run2023Cv4_4:    
+  #  dataset: /ParkingDoubleMuonLowMass4/Run2023C-22Sep2023_v4-v1/MINIAOD
+  #  isMC: False
+  #data_Run2023Cv4_5:    
+  #  dataset: /ParkingDoubleMuonLowMass5/Run2023C-22Sep2023_v4-v1/MINIAOD
+  #  isMC: False
+  #data_Run2023Cv4_6:    
+  #  dataset: /ParkingDoubleMuonLowMass6/Run2023C-22Sep2023_v4-v1/MINIAOD
+  #  isMC: False
+  #data_Run2023Cv4_7:    
+  #  dataset: /ParkingDoubleMuonLowMass7/Run2023C-22Sep2023_v4-v1/MINIAOD
+  #  isMC: False  
