--- a/production/MCsamples_2022EE.yml
+++ b/production/MCsamples_2022EE.yml
@@ -10,6 +10,12 @@ samples:
   WnuTau3Mu_2022EE:
     dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer22EEMiniAODv4-130X_mcRun3_2022_realistic_postEE_v6-v2/MINIAODSIM 
     isMC: True  
-  DstoPhiPi_2022EE:
-    dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer22EEMiniAODv4-130X_mcRun3_2022_realistic_postEE_v6-v2/MINIAODSIM 
-    isMC: True  
+  #DstoPhiPi_2022EE:
+  #  dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer22EEMiniAODv4-130X_mcRun3_2022_realistic_postEE_v6-v2/MINIAODSIM 
+  #  isMC: True  
+  #W3MuNu_2022EE:
+  #  dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer22EEMiniAODv3-124X_mcRun3_2022_realistic_postEE_v1-v2/MINIAODSIM
+  #  isMC: True
+  #W3MuNu_2022EEext:
+  #  dataset: 
+  #  isMC: True
