--- a/production/MCsamples_2022preEE.yml
+++ b/production/MCsamples_2022preEE.yml
@@ -7,16 +7,16 @@ samples:
   #
   #  MC
   #  
-  WnuTau3Mu_2022:
-    dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
-    isMC: True  
-  #DstoPhiPi_2022:
-  #  dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
+  #WnuTau3Mu_2022:
+  #  dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
   #  isMC: True  
-  #W3MuNu_2022:
-  #  dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer22MiniAODv3-124X_mcRun3_2022_realistic_v12-v2/MINIAODSIM
-  #  isMC: True
-  #W3MuNu_2022ext:
-  #  dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer22MiniAODv3-124X_mcRun3_2022_realistic_v12_ext1-v2/MINIAODSIM
-  #  isMC: True
+  DstoPhiPi_2022:
+    dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
+    isMC: True  
+  W3MuNu_2022:
+    dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer22MiniAODv3-124X_mcRun3_2022_realistic_v12-v2/MINIAODSIM
+    isMC: True
+  W3MuNu_2022ext:
+    dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer22MiniAODv3-124X_mcRun3_2022_realistic_v12_ext1-v2/MINIAODSIM
+    isMC: True
   
