--- a/production/MCsamples_2023BPix.yml
+++ b/production/MCsamples_2023BPix.yml
@@ -7,15 +7,15 @@ samples:
   #
   #  MC
   #  
-  WnuTau3Mu_2023BPix:
-    dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v2-v3/MINIAODSIM 
-    isMC: True  
-  #DstoPhiPi_2023BPix:
-  #  dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v2-v2/MINIAODSIM 
+  #WnuTau3Mu_2023BPix:
+  #  dataset: /WtoTauNu_Tauto3Mu_TuneCP5_13p6TeV_pythia8/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v2-v3/MINIAODSIM 
   #  isMC: True  
-  #W3MuNu_2023BPix:
-  #  dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v6-v2/MINIAODSIM 
-  #  isMC: True
-  #W3MuNu_2023BPixext:
-  #  dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v6_ext1-v2/MINIAODSIM
-  #  isMC: True
+  DstoPhiPi_2023BPix:
+    dataset: /DstoPhiPi_Phito2Mu_MuFilter_TuneCP5_13p6TeV_pythia8-evtgen/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v2-v2/MINIAODSIM 
+    isMC: True  
+  W3MuNu_2023BPix:
+    dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v6-v2/MINIAODSIM 
+    isMC: True
+  W3MuNu_2023BPixext:
+    dataset: /WTo3MuNu_smfull_TuneCP5_13p6TeV_madgraph-pythia8/Run3Summer23BPixMiniAODv4-130X_mcRun3_2023_realistic_postBPix_v6_ext1-v2/MINIAODSIM
+    isMC: True
